--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ggeditor-vue",
-  "version": "0.8.0",
+  "version": "0.10.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,11 +10,18 @@
   },
   "main": "dist/ggeditor-vue.umd.min.js",
   "dependencies": {
-    "@antv/g6": "~3.2.10",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
+    "@antv/g6": "~3.7.0",
+    "vue": "^2.6.11",
+    "lodash": "^4.17.15",
+    "vuex": "^3.1.2"
+  },
+  "peerDependencies": {
+    "@antv/g6": "~3.7.0",
+    "vue": "^2.6.11",
+    "lodash": "^4.17.15",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -35,7 +42,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "typescript": "~3.7.5",
     "vue-cli-plugin-element": "^1.0.1",
